--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "4.11.0",
     "styled-components": "^5.3.9",
     "styled-normalize": "^8.0.7"
   },
